# space_invaders

./: Cargo.toml  index.html
pkg/: space_invaders.wasm
src/: game.rs  main.rs  start.rs
src/modules/: bullet.rs  enemy.rs  mod.rs  player.rs  text_button.rs
